--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  margin: 0;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #313131;
+  height: 100%;
 }
 
 code {
